# fullerton_takehome

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/api/: errors.py  routes.py
app/clients/: gemini.py
app/pipeline/: classify.py  extract.py  normalize.py  orchestrator.py  postprocess.py  validate.py
app/prompts/: __init__.py  base.py  medical_certificate.py  receipt.py  referral_letter.py
app/schemas/: __init__.py  base.py  medical_certificate.py  receipt.py  referral_letter.py
app/storage/: failure_store.py
app/utils/: logging.py  timing.py
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_classify.py  test_postprocess.py  test_validate.py
